fix section 1 spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     color: white;
     justify-content: space-between;
     height: 50px;
+    align-items: center;
 }
 
 .header-links {
@@ -33,9 +34,17 @@ ul {
 .section-1 {
     background-color: #1f2937;
     display:flex;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    gap: 50px;
   }
 
 .section-1 img {
+    width: 400px;
+}
+
+.left-container {
     width: 400px;
 }
 
@@ -48,6 +57,7 @@ ul {
 .hero-secondary-text {
     color: #e5e7eb;
     font-size: 18px;
+    margin-top: 8px;
 }
 
 .section-1 button {
@@ -56,5 +66,6 @@ ul {
     color: #e5e7eb;
     padding: 5px 25px;
     font-size: 18px;
-    border-radius: 12px;
+    border-radius: 8px;
+    margin-top: 15px;
 }
